--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-<h1 align="center"> Accelerometer </h1>
+<h1 align="center"> Activity detection using Accelerometer </h1><br>
+<h4 align="center"> Meghdeep Jana (1501030..) </h4>
+<h4 align="center"> Satyam Saurabh (150103062) </h4><br><br>
 
-<p align="center"> About </p>
+<h2> Abstract </h2><br>
+
+<p> Activity  recognition  fits  within  the  bigger  framework
+of context awareness.  In this project,  we report on our
+efforts  to  recognize  user  activity  from  accelerometer
+data </p>
+
 
 
 </body>  
