--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <h4 align="center"> Meghdeep Jana (1501030..) </h4>
 <h4 align="center"> Satyam Saurabh (150103062) </h4><br><br>
 
-<h2> Abstract </h2><br>
+<h2> Abstract </h2>
 
-<p> Activity  recognition  fits  within  the  bigger  framework
+<p font-size="60"> Activity  recognition  fits  within  the  bigger  framework
 of context awareness.  In this project,  we report on our
 efforts  to  recognize  user  activity  from  accelerometer
 data </p>
