--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h2> Abstract </h2>
 
-<p font-size="60"> Activity  recognition  fits  within  the  bigger  framework
+<p> Activity  recognition  fits  within  the  bigger  framework
 of context awareness.  In this project,  we report on our
 efforts  to  recognize  user  activity  from  accelerometer
 data </p>
