--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
-<h1 align="center"> Activity detection using Accelerometer </h1><br>
-<h4 align="center"> Meghdeep Jana (1501030..) </h4>
-<h4 align="center"> Satyam Saurabh (150103062) </h4><br><br>
+  <head>
+    <link rel="stylesheet" href="main.css">
+  </head>
+  <body>
+    <h1 align="center"> Activity detection using Accelerometer </h1><br>
+    <h4 align="center"> Meghdeep Jana (150103082) </h4>
+    <h4 align="center"> Satyam Saurabh (150103062) </h4><br><br>
 
-<h2> Abstract </h2>
+    <h2> Abstract </h2>
+    <basefont size="100">
+    <p> Activity  recognition  fits  within  the  bigger  framework
+    of context awareness.  In this project,  we report on our
+    efforts  to  recognize  user  activity  from  accelerometer
+    data </p>
 
-<p> Activity  recognition  fits  within  the  bigger  framework
-of context awareness.  In this project,  we report on our
-efforts  to  recognize  user  activity  from  accelerometer
-data </p>
-
-
-
-</body>  
+  </body>  
 </html>
