--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 							<!-- Start edit here  -->
 							Block diagram of the system.
-							<img src="morty.jpg" alt="This text displays when the image is umavailable" width="800px" height="500px"/>
+							<img src="image.png" alt="This text displays when the image is umavailable" width="800px" height="500px"/>
 							<!-- Stop edit here -->
 
 						</div>
@@ -126,7 +126,7 @@
 							Z axis -> left / right motion 
 							No. of dataset collected 9
 							Each data set includes listed 3 activities having time interval of 150 seconds for every activity.
-							github <a href="https://satyam2401.github.io/">link</a> containing data file, feature extraction code, classifier code.
+							github <a href="https://github.com/satyam2401/satyam2401.github.io/">link</a> containing data file, feature extraction code, classifier code.
 							
 							<!-- Stop edit here -->
 
